# SmartWatchProject

./: .gitignore  AGENTS.md  DEPLOYMENT-SUMMARY.md  DEVELOPMENT-ENVIRONMENT-SUMMARY.md  Dockerfile  INTEGRATION-SUMMARY.md  README-QUALITY-AUTOMATION.md  README.md  setup.ps1  setup.sh
.bmad-core/: install-manifest.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
cicd/: cicd-pipeline.ps1  deployment-automation.ps1  integration-tests.ps1  monitoring-dashboard.ps1  quality-integration.ps1  story-1-1-alerts.ps1  story-1-1-monitoring.ps1  story-1-1-pipeline.ps1  story-1-1-reporting.ps1  testing-pipeline.ps1  validate-integration.ps1
config/: cicd-config.json
docs/: DOCUMENT_DEFINITION_OF_DONE.md  DOCUMENT_QUALITY_GATES.md  ESP32-S3-Development-Environment-Setup.md  PROCESS_MONITORING_DASHBOARD.md  SPRINT_1_RISK_REGISTER.md  SPRINT_1_SUCCESS_METRICS.md  STORY_1_1_QUALITY_CHECKLIST.md  architect.md  architecture.md  esp32-development-setup-guide.md  prd.md  (+3 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/main/app/: StateManager.cpp  StateManager.h
firmware/main/boot/: BootManager.cpp  BootManager.h  LEDStatusSystem.cpp  LEDStatusSystem.h  MemoryManager.cpp  MemoryManager.h
firmware/main/common/: Config.h  Logger.h  Types.h
firmware/main/hal/: DisplayHAL.cpp  DisplayHAL.h  PowerHAL.cpp  PowerHAL.h  TouchHAL.cpp  TouchHAL.h
firmware/main/services/: BluetoothService.cpp  BluetoothService.h  NvsService.cpp  NvsService.h  WiFiService.cpp  WiFiService.h
firmware/main/ui/: UIManager.cpp  UIManager.h
firmware/tests/: CMakeLists.txt  PowerHAL.cpp  PowerHAL.h  StateManager.cpp  StateManager.h  minigtest.h  minitest.h  run_tests.ps1  run_tests.sh  test_main.cpp  test_power_hal.cpp  test_powerhal.cpp  test_state_manager.cpp  test_statemanager.cpp  tests_main.cpp
(+59 files in other folders)
